--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(135deg, #f8cdda, #f2a7c1);
+  background: linear-gradient(135deg, #c471f5, #fa71cd);
   color: #fff;
   min-height: 100vh;
   background-attachment: fixed;
