Fixed bgclr and contact

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(135deg, #c471f5, #fa71cd);
+  background: linear-gradient(135deg, #d7a1f9, #fbc2eb)	
   color: #fff;
   min-height: 100vh;
   background-attachment: fixed;
